# estat-cli

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  model.rs  service.rs
src/cli/: data.rs  indicator.rs  region.rs  social_event.rs  stat.rs  term.rs
src/cli/data/: README.md
src/cli/indicator/: README.md
src/cli/region/: README.md
src/cli/social_event/: README.md
src/cli/stat/: README.md
src/cli/term/: README.md
src/lib/: path.rs  record.rs  writer.rs
src/lib/http/: request.rs
src/model/: data.rs  indicator.rs  population.rs  region.rs  social_event.rs  stat.rs  term.rs
src/service/: create_json_file_service.rs
